# emitrr_assign

./: .gitignore  README.md  app.py  app_benching.py  ground_truth.json  problemstatement.md  pyproject.toml  requirement.txt  requirements.txt  restore.py  test.py  transcript.py
.streamlit/: config.toml
utils/: bert_name_detector.py  biobert_finetuned.py  biobert_ner.py  keyword.py  model_cache.py  name_detector.py  ner.py  sentiment_analyzer.py  soap_generator.py  summarization.py  train_biobert_finetuned.py
